# make-it-so

./: .gitignore  Cargo.toml  LICENSE.md  README.md  install-windows.ps1  install.sh
.cargo/: config.toml
.github/workflows/: release.yml
changelogs/: CHANGELOG-v0.3.4.md
examples/: example-plugin.toml  ollama-example.toml
notes/: ARGUMENT_PARSING_ANALYSIS.md  composable_feature.md  devlog.md  mis_add.md
scripts/: latest.sh  test-ts.sh
src/: cli.rs  constants.rs  git_utils.rs  main.rs  models.rs  plugin_utils.rs  security.rs  utils.rs  validation.rs
src/commands/: add.rs  build.rs  create.rs  deploy.rs  help.rs  init.rs  mod.rs  run.rs  update.rs
src/config/: mod.rs  plugins.rs
src/integrations/: deno.rs
src/strategy/: build.rs  campsites.rs  deploy.rs  mod.rs  plugin.rs  utils.rs
templates/: config.toml  mis-plugin-api.ts  mis-plugin-bootstrap.ts  mis-types.d.ts  plugin-manifest.toml
templates/tests/: README.md  deno.json  json-extraction.test.ts  mis-plugin-api.test.ts  mis-types.test.ts
testdata/campsites/.shipwreck/services/: fake_app.toml
testdata/campsites/devops/: test.yaml
testdata/fake-campsite-app/.shipwreck/: my-strategy.js  shipwreck.toml
testdata/fake-campsite-app/.shipwreck/services/: fake_app.toml
testdata/fake-campsite-app/devops/: dev.yaml  lab.yaml
testdata/test/.shipwreck/: my-proj.toml  my-strat.js
