[package]
name = "make-it-so"
version = "0.1.2"
edition = "2024"
description = "A fast CLI that runs TypeScript-powered plugins for your dev workflows."

[[bin]]
name = "mis"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.33", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"